lib/util/fault.h
@@ -24,11 +24,15 @@
 #include <sys/types.h>
 
 #include "attr.h"
+
+#ifndef DEBUG
 #include "debug.h"
+#endif /* DEBUG */
 
 /**
  * assert macros
  */
+#ifdef _SAMBA_DEBUG_H
 #define SMB_ASSERT(b) \
 do { \
 	if (!(b)) { \
@@ -37,6 +41,7 @@ do { \
 		smb_panic("assert failed: " #b); \
 	} \
 } while(0)
+#endif /* _SAMBA_DEBUG_H */
 
 extern const char *panic_action;
 
